--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"$components/*": ["src/components/*"]
+			"$components/*": ["src/components/*"],
+			"$services/*": ["src/services/*"]
 		}
 	},
   // ...
